Fix KConfigGui initialization in case of static builds

This way we ensure that the symbols land in the actual executable and
thus we call the KConfigGui method.

BUG: 459337